fix policy.js load problem

--- a/fatherSon/index.html
+++ b/fatherSon/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Example - example-heroComponentSimple-production</title>
-        <script src="/js/policy.js"></script>
+        <script src="../js/policy.js"></script>
         <script src="angular.min.js"></script>
         <script src="jquery.min.js"></script>
         <script src="index.js"></script>
